# snarkpy

./: .flake8  .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  Makefile  README.md  circuit.circom  package-lock.json  package.json  pyproject.toml
.github/workflows/: docker.yaml  pytest.yaml
python/snarkpy/: __init__.py  cli.py  elliptic.py  elliptic_curve.py  field.py  hash.py  polynomial.py
python/snarkpy/plonk/: parse.py  prove.py
snarkpy/: cli.py  field.py  file.py  hash.py  polynomial.py
snarkpy/plonk/: prove.py  verify.py
src/: field.rs  hash.rs  lib.rs  polynomial.rs
src/elliptic_curve/: bn128.rs  mod.rs
tests/: test_elliptic_curve.py  test_field.py  test_polynomial.py
