[package]
name = "snarkpy"
version = "0.1.0"
authors = ["y011d4 <yoiida333@gmail.com>"]
edition = "2021"
license = "MIT or Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "snarkpy"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[dependencies]
hex = "0.4.3"
num-bigint = "*"

[dependencies.tiny-keccak]
version = "2.0.2"
features = ["keccak"]

[dependencies.pyo3]
version = "0.20.2"
features = ["extension-module", "num-bigint"]
