[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "snarkpy"
description = ""
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name = "y011d4"},
  {email = "yoiida333@gmail.com"}
]
maintainers = [
  {name = "y011d4"},
  {email = "yoiida333@gmail.com"}
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "py-ecc>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "ipython>=8.21.0",
    "py-spy>=0.3.14",
]

[project.scripts]
snarkpy = "snarkpy.cli:main"

[tool.maturin]
python-source = "python"
module-name = "snarkpy._snarkpy"
features = ["pyo3/extension-module"]
